[project]
name = "fasttd3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "gymnasium<1.0.0",
  'jax-jumpy==1.0.0 ; python_version >= "3.8" and python_version < "3.11"',
  "matplotlib",
  "moviepy",
  "numpy<2.0",
  "pandas",
  "protobuf",
  "pygame",
  "stable-baselines3",
  "tqdm",
  "wandb",
  "tensordict>=0.12.3",
  "tyro",
  "loguru"
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
humanoid-bench= { path = "/home/simeon/code/humanoid-bench", editable=true}

[dependency-groups]
humanoid = [
  "humanoid-bench",
  "opencv-python-headless>=4.11.0.86",
  "opencv-contrib-python-headless>=4.11.0.86"
]


[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
